deployment/overlays/test/keycloak-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: keycloak
          args: 
            - start
            - --hostname=auth.hms.test.boredotter.dev
            - --http-enabled=true
            - --proxy-headers=xforwarded
            - --db=postgres
            - --db-url-host=postgres
            - --db-username=keycloak
            - --db-password=keycloak
          env:
            - name: KEYCLOAK_ADMIN
              valueFrom:
                secretKeyRef:
                  name: keycloak-credentials
                  key: KEYCLOAK_ADMIN
            - name: KEYCLOAK_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: keycloak-credentials
                  key: KEYCLOAK_ADMIN_PASSWORD
